--- a/public/projetos/pietra/estilo.css
+++ b/public/projetos/pietra/estilo.css
@@ -3,10 +3,12 @@ p{
     font-family:sans-serif;
 }
 
-
-
 body{
     background-color: rgb(244, 200, 248);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
 *{
@@ -14,10 +16,17 @@ body{
     padding: 50;
 }
 
+.imagem {
+    display: flex;
+    flex-direction: row;
+}
+
 footer{
     background-color:honeydew;
-    color: black;
     height: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 #div_direita{
